--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <span class="ms-2"><b class="text-primary">G</b>regslist</span>
       </a>
       <button class="btn selectable" onclick="app.carsController.viewCars()">🚗</button>
-      <button class="btn selectable" onclick="">🏠</button>
+      <button class="btn selectable" onclick="app.housesController.viewHouses()">🏠</button>
       <button class="btn selectable" onclick="">💼</button>
     </nav>
   </header>
